--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
     "@react-three/fiber": "^8.17.14",
     "@tabler/icons-react": "^3.30.0",
     "@tanstack/react-query": "^5.66.0",
+    "@types/canvas-confetti": "^1.9.0",
     "@types/three": "^0.173.0",
     "animejs": "^3.2.2",
     "axios": "^1.7.9",
+    "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -34,7 +36,7 @@
     "js-cookie": "^3.0.5",
     "kute.js": "^2.2.4",
     "lucide-react": "^0.475.0",
-    "motion": "^12.4.4",
+    "motion": "^12.4.7",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
     "next-theme": "^0.1.5",
@@ -47,7 +49,7 @@
     "scrollreveal": "^4.0.9",
     "sonner": "^1.7.4",
     "swiper": "^11.2.4",
-    "tailwind-merge": "^3.0.1",
+    "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.173.0",
     "zod": "^3.24.2",
