--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/core": "^0.34.2",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@heroui/pagination": "^2.2.9",
     "@hookform/resolvers": "^4.1.0",
