--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "@react-three/fiber": "^8.17.14",
     "@tabler/icons-react": "^3.30.0",
     "@tanstack/react-query": "^5.66.0",
+    "@tsparticles/engine": "^3.8.1",
+    "@tsparticles/react": "^3.0.0",
+    "@tsparticles/slim": "^3.8.1",
     "@types/canvas-confetti": "^1.9.0",
     "animejs": "^3.2.2",
     "axios": "^1.7.9",
