--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@react-three/fiber": "^8.17.14",
+    "@sentry/nextjs": "^9.4.0",
     "@tabler/icons-react": "^3.30.0",
     "@tanstack/react-query": "^5.66.0",
     "@tsparticles/engine": "^3.8.1",
@@ -32,11 +33,13 @@
     "canvas-confetti": "^1.9.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.4.7",
     "frontend": "file:",
     "gsap": "^3.12.7",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "kute.js": "^2.2.4",
     "lucide-react": "^0.475.0",
     "motion": "^12.4.7",
@@ -44,6 +47,7 @@
     "next-auth": "^4.24.11",
     "next-theme": "^0.1.5",
     "next-themes": "^0.4.4",
+    "posthog-js": "^1.227.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
