--- a/package.json
+++ b/package.json
@@ -17,12 +17,16 @@
     "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-slider": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-switch": "^1.1.3",
     "@radix-ui/react-tooltip": "^1.1.8",
-    "@react-three/fiber": "^8.17.14",
+    "@react-three/drei": "^10.0.4",
+    "@react-three/fiber": "^9.1.0",
+    "@react-three/postprocessing": "^3.0.4",
     "@sentry/nextjs": "^9.4.0",
     "@tabler/icons-react": "^3.30.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.66.0",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
@@ -35,23 +39,29 @@
     "clsx": "^2.1.1",
     "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
-    "framer-motion": "^12.4.7",
+    "framer-motion": "^12.4.10",
     "frontend": "file:",
     "gsap": "^3.12.7",
+    "isomorphic-dompurify": "^2.22.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "kute.js": "^2.2.4",
     "lucide-react": "^0.475.0",
+    "maath": "^0.10.8",
     "motion": "^12.4.7",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
     "next-theme": "^0.1.5",
     "next-themes": "^0.4.4",
     "posthog-js": "^1.227.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-countup": "^6.5.3",
+    "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
-    "react-parallax": "^3.5.1",
+    "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
+    "react-parallax-tilt": "^1.7.286",
+    "react-type-animation": "^3.2.0",
     "recharts": "^2.15.1",
     "scrollreveal": "^4.0.9",
     "sonner": "^1.7.4",
