--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "@eslint/eslintrc": "^3",
     "@types/animejs": "^3.1.13",
     "@types/js-cookie": "^3.0.6",
+    "@types/lodash": "^4.17.16",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
