--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "@react-three/fiber": "^9.1.0",
     "@react-three/postprocessing": "^3.0.4",
     "@sentry/nextjs": "^9.4.0",
-    "@tabler/icons-react": "^3.30.0",
+    "@tabler/icons-react": "^3.31.0",
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.66.0",
     "@tsparticles/engine": "^3.8.1",
     "@tsparticles/react": "^3.0.0",
     "@tsparticles/slim": "^3.8.1",
     "@types/canvas-confetti": "^1.9.0",
+    "@types/pdfjs-dist": "^2.10.378",
     "animejs": "^3.2.2",
     "axios": "^1.7.9",
     "canvas-confetti": "^1.9.3",
@@ -42,25 +43,30 @@
     "framer-motion": "^12.4.10",
     "frontend": "file:",
     "gsap": "^3.12.7",
+    "idb-keyval": "^6.2.1",
     "isomorphic-dompurify": "^2.22.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "kute.js": "^2.2.4",
     "lucide-react": "^0.475.0",
     "maath": "^0.10.8",
-    "motion": "^12.4.7",
+    "mammoth": "^1.9.0",
+    "motion": "^12.5.0",
     "next": "15.1.7",
     "next-auth": "^4.24.11",
     "next-theme": "^0.1.5",
     "next-themes": "^0.4.4",
+    "pdfjs-dist": "^5.0.375",
     "posthog-js": "^1.227.0",
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
+    "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
     "react-parallax-tilt": "^1.7.286",
+    "react-pdf": "^9.2.1",
     "react-type-animation": "^3.2.0",
     "recharts": "^2.15.1",
     "scrollreveal": "^4.0.9",
