--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -52,7 +52,7 @@
     "maath": "^0.10.8",
     "mammoth": "^1.9.0",
     "motion": "^12.5.0",
-    "next": "15.1.7",
+    "next": "^15.2.3",
     "next-auth": "^4.24.11",
     "next-theme": "^0.1.5",
     "next-themes": "^0.4.4",
