--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/core": "^0.34.2",
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@gsap/react": "^2.1.2",
+    "@headlessui/react": "^2.2.2",
     "@heroui/pagination": "^2.2.9",
     "@hookform/resolvers": "^4.1.0",
     "@lottiefiles/react-lottie-player": "^3.6.0",
