fix: updated the auth api file

--- a/package.json
+++ b/package.json
@@ -48,15 +48,20 @@
     "framer-motion": "^12.4.10",
     "frontend": "file:",
     "gsap": "^3.12.7",
+    "highlight.run": "^9.16.2",
     "idb-keyval": "^6.2.1",
     "isomorphic-dompurify": "^2.22.0",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "kute.js": "^2.2.4",
+    "localforage": "^1.10.0",
+    "loglevel": "^1.9.2",
+    "loglevel-plugin-prefix": "^0.8.4",
     "lucide-react": "^0.475.0",
     "maath": "^0.10.8",
     "mammoth": "^1.9.0",
     "motion": "^12.5.0",
+    "nanoid": "^5.1.5",
     "next": "^15.2.3",
     "next-auth": "^4.24.11",
     "next-theme": "^0.1.5",
@@ -88,6 +93,7 @@
     "@types/animejs": "^3.1.13",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash": "^4.17.16",
+    "@types/loglevel": "^1.6.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
